--- a/css/nationalPark.css
+++ b/css/nationalPark.css
@@ -51,12 +51,16 @@ input[type=text] {
     padding: 12px 20px 12px 40px;
     margin:2rem;
     border-radius: 1rem;
-    border:2px solid black;
+    
+    background-color: transparent;
+    
     
   }
   input::placeholder{
-    color:black;
+    color:white;
 }
 input{
-    border:none;
+    border:2px solid #333741;
+    background-color: transparent;
 }
+
