--- a/css/nationalPark.css
+++ b/css/nationalPark.css
@@ -46,7 +46,7 @@ input[type=text] {
     box-sizing: border-box;
     /* border: 2px solid #ccc; */
     border-radius: 4px;
-    font-size: 16px;
+    font-size: larger;
     /* background-color: white; */
     /* background-image: url('/searchicon.png'); */
     background-position: 10px 10px; 
@@ -64,8 +64,15 @@ input[type=text] {
 }
 input{
     color:white;
-
-
-    background-color: transparent;
+    margin:2rem;
+    border-radius: 1rem;
+    padding:1rem;
+    
+        font-size: larger;
+        /* background:transparent;
+        color:white; */
+        border: 2px solid #333741;
 }
+
+
 
