--- a/css/mountain.css
+++ b/css/mountain.css
@@ -74,7 +74,7 @@ input[type=text] {
     font-size: 16px;
     background-color: white;
     background-image: url('../searchicon.png');
-    background-position: 10px 10px; 
+    background-position: 0; 
     background-repeat: no-repeat;
     padding: 12px 20px 12px 40px;
     margin:2rem;
